vendor/proc-macro-error-1.0.4/tests/ui/multiple_tokens.stderr
error: ...
 --> $DIR/multiple_tokens.rs:4:1
  |
4 | type T = ();
  | ^^^^^^^^^^^^
