vendor/proc-macro-error-1.0.4/tests/ui/multiple_tokens.rs
extern crate test_crate;

#[test_crate::multiple_tokens]
type T = ();

fn main() {}